Mapbender Popup: render non-modals without a popupContainer wrap, allowing automatic size without background click event issues

--- a/src/Mapbender/CoreBundle/Resources/public/sass/modules/_popup.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/modules/_popup.scss
@@ -69,6 +69,12 @@
     padding-bottom:$space;
   }
   position:relative;
+  &.mapbender-popup {
+    // Set initial position on page
+    // FOM popup does this with a margin relative to its (draggable!) invisible container...
+    left: 80px;
+    top: 100px;
+  }
   z-index:9999;
   background-color:#f4f4f4;
   background-image:url($contentPatternUrl);
@@ -84,6 +90,15 @@
     .popupContent, .popupSubContent{overflow:visible;}
   }
 }
+.popupContainer.ui-draggable, .popup.ui-draggable {
+  .popupHead {
+    cursor:move;
+  }
+  &.ui-draggable-dragging {
+    @include opacity(0.6);
+  }
+}
+
 .popupContainer{
   z-index:999;
   @include absolute(0 0 0 0);
@@ -94,17 +109,12 @@
   width: 0;
   height: 0;
   // FOM popup attaches draggable on the container, not the popup!
-  &.ui-draggable-dragging{@include opacity(0.6);}
   &.ui-draggable{
     position:absolute !important; // avoid strange popup growing behaviour
-    .popupHead{cursor:move;}
   }
   .popup {
     margin-left:80px;
     margin-top:100px;
-    &.ui-draggable {
-      .popupHead{cursor:move;}
-    }
   }
   &.modal{
     @include fixed(0 0 0 0);
@@ -113,7 +123,9 @@
     padding: $space*2.5;
     display: block;
     .popup{
-      z-index: 1000;
+      // undo relative top / left used to set draggable non-modal initial position
+      top: 0;
+      left: 0;
       margin: 0 auto;
       max-height: 100%;
       &.fom-popup {
